# geometry

./: CMakeLists.txt  README.md
include/gillwald/: geometry.hpp
include/util/: pngEncodeDecode.hpp
src/: geometry.cpp  lodepng.cpp  pngEncodeDecode.cpp
test/: geometry_tests.cpp  pngEncodeDecode_tests.cpp
